plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.6'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.diffplug.spotless' version '6.25.0'
	id 'jacoco'
}

group = 'com.bigbank'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

jacoco {
	toolVersion = "0.8.14"
}

spotless {
	java {
		targetExclude 'build/**'

		googleJavaFormat("1.27.0")
		removeUnusedImports()

		trimTrailingWhitespace()
		endWithNewline()
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2'
	implementation 'org.springframework.boot:spring-boot-http-client:4.0.6'
	implementation 'org.mapstruct:mapstruct:1.6.3'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'
}


tasks.named('test') {
	useJUnitPlatform()
	jvmArgs("-XX:+EnableDynamicAgentLoading")
	testLogging {
		events 'passed', 'skipped', 'failed'
		showStandardStreams = false
	}
}

tasks.named('jacocoTestReport') {
	dependsOn tasks.named('test')

	reports {
		xml.required = true
		html.required = true
	}

	executionData tasks.named('test').get()
}

tasks.named('check') {
	dependsOn tasks.named('test')
	dependsOn tasks.named('jacocoTestReport')
}

tasks.withType(Test).configureEach {
	jacoco {
		includes = ['com.bigbank.*']
		excludes = [
				'jdk.internal.*',
				'sun.*',
				'com.sun.*',
				'java.*',
				'javax.*',
				'org.jcp.*'
		]
	}
}